0.0.6
    o subjectProfileLinePlot: include colorPalette
    o subjectProfileIntervalPlot: don't delete records without start date, different arrows for missing start/end dates
    o subjectProfileIntervalPlot: consider min/max time per subject in case of missing date, include timeLimData/timeLimVar
0.0.5
    o add concomitant medications in vignette
    o getNLinesYGgplot: extend to multiple panels 
    o subjectProfileLinePlot: add paramValueRangeVar
    o subsetVar and subsetValue
0.0.4
    o subjectProfileIntervalPlot: re-label [start|end]Var -> time[Start|end]Var and use arrow for non-ending interval
    o use viridisLite instead of viridis paclage
    o createSubjectProfileReport: automatic split of modules across pages in report
    o subjectProfileTextPlot: concatenate information if duplicated info
    o subjectProfileLinePlot
    o getXLimSubjectProfilePlots: fix extraction limits for interval plot
    o add sessionInfo, shiny parameter
    o rename loadDataADaM by loadDataADaMSDTM
    o defineIndex: fix when only one variable is used
    o createSubjectProfileReport: possibility to sort subjects based on a variable
0.0.3
    o subjectProfileTextPlot: possibility to have multiple paramValueVar in same line, fix ordering
    o subjectProfileTextPlot: paramValueVar can be a function
    o subjectProfile[Interval|Event]Plot: colorPalette and getPatientColorPalette
    o subjectProfileEventPlot: shapePalette and getPatientShapePalette
    o add label attributes reported in case plot is empty
    o add grouping variable
    o subjectProfileTheme
    o loadDataADAM: include support for date/time format
    o createSubjectProfileReport/subjectProfileCombine: add refLines parameter
    o new addReferenceLinesProfilePlot function
    o add bookmark functionality
    o include missing values in palette
0.0.2
    o remove glpgUtility from the dependencies
0.0.1
    o initial commit