@@ -31,8 +31,6 @@ importFrom(ggplot2,theme_bw)
 importFrom(glpgStyle,glpgColor)
 importFrom(glpgStyle,glpgPaletteCharts)
 importFrom(grid,convertX)
-importFrom(grid,gpar)
-importFrom(grid,textGrob)
 importFrom(haven,read_sas)
 importFrom(knitr,knit)
 importFrom(knitr,knit_expand)
@@ -42,6 +40,7 @@ importFrom(plyr,ddply)
 importFrom(plyr,dlply)
 importFrom(reshape2,melt)
 importFrom(stats,reorder)
+importFrom(stats,setNames)
 importFrom(tools,file_path_sans_ext)
 importFrom(tools,texi2pdf)
 importFrom(viridisLite,viridis)
