@@ -2,6 +2,7 @@
     o subjectProfileLinePlot: include colorPalette
     o subjectProfileIntervalPlot: don't delete records without start date, different arrows for missing start/end dates
     o subjectProfileIntervalPlot: consider min/max time per subject in case of missing date, include timeLimData/timeLimVar
+    o addReferenceLinesProfilePlot: fix issue for panel plot (e.g. line plot) and use geom_text to get labels reference lines
 0.0.5
     o add concomitant medications in vignette
     o getNLinesYGgplot: extend to multiple panels 
